<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, AndroidDashboardDesignActivity!</string>
    <string name="app_name">AndroidDashboardDesign</string>
    <string name="quants">Quantitative</string>
    <string name="language">Language</string>
    <string name="verbal">Verbal And Logical</string>
    <string name="compfun">Computer Fundamentals</string>
    <string name="interview">Interview</string>
    <string name="tutorial">Tutorial</string>
    <string name="puzzles">Brain Teasers</string>
    <string name="allinone">All In One</string>
    <string name="c">C</string>
    <string name="cpp">C++</string>
    <string name="java">Java</string>
    <string name="html">HTML</string>
    <string name="os">Operating System</string>
    <string name="dbms">Database Management System </string>
    <string name="dsa">Data Structures</string>
    
    <string-array name="quantitive_test_category_names">
	    <item>Numbers And Simplification</item>
	     <item>Square Root And Cube Root</item>
	     <item>>We have no idea what is this</item>
	     <item>Problem on Numbers And Ages</item>
	     <item>Percentage</item>
	     <item>Profit And Loss</item>
	     <item>Ratio And Proportion</item>
	     <item>Partnership</item>
	     <item>We have no idea what is this</item>
	     <item>Time And Work And Distance</item>
	     <item>Problem On Trains,Boats And Streams</item>
	     <item>Simple Interest And Compound Interest</item>
	     <item>Area And Volume</item>
	     <item>We have no idea what is this</item>
	     <item>Stocks And Shares</item>
	     <item>Permutation And Combination</item>
	     <item>Probablity</item>
    </string-array>
   	<string-array name="v_test_category_names">
	    <item>Analogy</item>
	    <item>Classification</item>
	    <item>Series Complition</item>
	    <item>Coding And Decoding</item>
	    <item>Blood Relations</item>
	    <item>Logical Sequence And Words</item>
	    <item>Decision Making</item>
	    <item>Data Suffiiency</item>
	    <item>Cause And Effects</item>
    </string-array>
    <string name="c1">Declaration And Initialization</string>
    <string name="c2">Contol Instructions</string>
    <string name="c3">Exprssions</string>
    <string name="c4">Floationg Point</string>
    <string name="c5">Functions</string>
    <string name="c6">C Preprocessor</string>
    <string name="c7">Pointers</string>
    <string name="c8">Arrays And Strings</string>
    <string name="c9">Structures,Unions,Enums </string>
    <string name="c10">Input Output</string>
    <string name="c11">Command Line Arguments</string>
    <string name="c12">Bitwise Operator</string>
    <string name="c13">Typedef,Const,Memory Allocation</string>
    <string name="c14">VarArgs,Complicated Declarations</string>
    <string name="cpp1">OOP Concepts </string>
    <string name="cpp2">Constructors And Destructors </string>
    <string name="cpp3">Pointers, Arrays, Constants, Structures </string>
    <string name="cpp4">Functions And Macros </string>
    <string name="cpp5">Operator And Overloading</string>
    <string name="cpp6">Derived Classes, templates and Exception Handling</string>
    <string name="cpp7"> Strings and Streams</string>
    <string name="j1">Basics,Control Statements,Operators </string>
    <string name="j2">Classes And Object </string>
    <string name="j3">Input And Output,Arrays,Strings</string>
    <string name="j4">Inheritance,Abstract Classes,Interfaces,Packeges</string>
    <string name="j5">Excception Handling And Assertions</string>
    <string name="j6">Enumerators And Nested Classes</string>
    <string name="j7">Files An Serialization</string>
    <string name="j8"> Threads</string>
    <string name="j9">Collections And Generics</string>
    <string name="j10">Formatters</string>
    <string name="v1">Analogy </string>
    <string name="v2">Classification</string>
    <string name="v3">Series Complition</string>
    <string name="v4">Coding And Decoding</string>
    <string name="v5">Blood Relations</string>
    <string name="v6">Logical Sequence And Words</string>
    <string name="v7">Decision Making</string>
    <string name="v8">Data Suffiiency</string>
    <string name="v9">Cause And Effects</string>
    <string name="head">Aptitude Guru</string>
   

</resources>