<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
  android:background="#F8F8F8"
    android:orientation="vertical" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
         android:background="#F8F8F8"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
           android:background="#F8F8F8" >

            <Button
                android:id="@+id/btn_v1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/v1" />

            <Button
                android:id="@+id/btn_v2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/v2" />

            <Button
                android:id="@+id/btn_v3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/v3" />

            <Button
                android:id="@+id/btn_v4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/v4" />

            <Button
                android:id="@+id/btn_v5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/v5" />

            <Button
                android:id="@+id/btn_v6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/v6" />

            <Button
                android:id="@+id/btn_v7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/v7" />

            <Button
                android:id="@+id/btn_v8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/v8" />

            <Button
                android:id="@+id/btn_v9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/v9" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>