<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F8F8F8"
    android:orientation="vertical" >

    <!-- Include Action Bar -->

    <include
        android:id="@+id/include1"
        android:layout_height="wrap_content"
        layout="@layout/actionbar_layout" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/include1"
        android:orientation="vertical"
          android:background="#F8F8F8" >

        <ScrollView
            android:id="@+id/scrollView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical" 
                  android:background="#F8F8F8">

                <Button
                    android:id="@+id/btn_c1"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_gravity="right"
                      android:background="@drawable/shape"
                    android:text="@string/c1" />

                <Button
                    android:id="@+id/btn_c2"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_gravity="right"
                      android:background="@drawable/shape"
                    android:text="@string/c2" />

              <!--   <Button
                    android:id="@+id/btn_c3"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_gravity="right"
                      android:background="@drawable/shape"
                    android:text="@string/c3" />-->

                <Button
                    android:id="@+id/btn_c4"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_gravity="right"
                      android:background="@drawable/shape"
                    android:text="@string/c4" />

                <Button
                    android:id="@+id/btn_c5"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_gravity="right"
                      android:background="@drawable/shape"
                    android:text="@string/c5" />

                <Button
                    android:id="@+id/btn_c6"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_gravity="right"
                      android:background="@drawable/shape"
                    android:text="@string/c6" />

                <Button
                    android:id="@+id/btn_c7"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_gravity="right"
                      android:background="@drawable/shape"
                    android:text="@string/c7" />

                <Button
                    android:id="@+id/btn_c8"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_gravity="right"
                      android:background="@drawable/shape"
                    android:text="@string/c8" />

                <Button
                    android:id="@+id/btn_c9"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_gravity="right"
                      android:background="@drawable/shape"
                    android:text="@string/c9" />

                <Button
                    android:id="@+id/btn_c10"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_gravity="right"
                      android:background="@drawable/shape"
                    android:text="@string/c10" />

                <Button
                    android:id="@+id/btn_c11"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_gravity="right"
                      android:background="@drawable/shape"
                    android:text="@string/c11" />

                <Button
                    android:id="@+id/btn_c12"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_gravity="right"
                      android:background="@drawable/shape"
                    android:text="@string/c12" />

                <Button
                    android:id="@+id/btn_c13"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_gravity="right"
                      android:background="@drawable/shape"
                    android:text="@string/c13" />

                <Button
                    android:id="@+id/btn_c14"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_gravity="right"
                      android:background="@drawable/shape"
                    android:text="@string/c14" />
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

</RelativeLayout>